# JVM

./: .gitignore  Cargo.toml  README.md  test.txt
IO/: ioTer.java  native_io.c
cli/: Cargo.toml
cli/src/: main.rs
parser/: Cargo.toml
parser/src/: access_flag.rs  attribute.rs  class_file.rs  class_file_reader.rs  class_version.rs  consant_pool.rs  constant_pool.rs  instruction.rs  lib.rs  types.rs
test/: Coord.java  ExceptionHandlingExample.java  ExpressionParser.java  MemTest.java  MethodOverloadingExample.java  MultiDimensionalArrayExample.java  MyNumber.java  SimpleBubbleSort.java  SmallProgram.java  StringExample.java  SumEvenNumbers.java  hello.java  out.out  test.java
test/Report/: SumOfEvenNumbers.java  ioTer.java
test/inheritance/: Animal.java  Cat.java  Dog.java  Main.java
test/interface/: Main.java  Rectangle.java  Shape.java  Triangle.java
vm/: Cargo.toml
vm/src/: class.rs  class_entry.rs  class_file.rs  class_loader.rs  class_manager.rs  class_path.rs  directory_entry.rs  error.rs  garbagge_collector.rs  heap.rs  jar_entry.rs  jvm_error.rs  lib.rs  native.rs  object.rs  parse_des.rs  runtime.rs  state.rs  vis.rs  vm.rs
vm/src/class_loader/: class_loader.rs  class_loading_error.rs  classpath_entry.rs  loaded_class.rs
vm/src/execute/: execute.rs  execute_array.rs  execute_athimetic.rs  execute_branch.rs  execute_cast.rs  execute_constant.rs  execute_convert.rs  execute_exception.rs  execute_field.rs  execute_load.rs  execute_method.rs  execute_monitor.rs  execute_object.rs  execute_return.rs  execute_shift.rs  execute_store.rs
(+4 files in other folders)
