[package]
name = "vm"
version = "0.1.0"
edition = "2021"

[dependencies]
parser = {path = "../parser"}
zip = { version = "2.2.0", features = ["deflate"] }
typed-arena = "2.0.2"
indexmap = "2.5.0"
async-trait = "0.1.85"
tokio = { version = "1.43.0", features = ["full"]}
libloading = "0.8.6"
libc = "0.2.170"
libffi = "3.2.0"

[build-dependencies]
cc = "1.2.16"
